php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #25744 --with-sybase option is failing with "php_sybase_db.c:147:`tsrm_ls' undeclared"
Submitted: 2003-10-03 08:50 UTC Modified: 2003-10-17 03:28 UTC
From: christian_m_caron at hotmail dot com Assigned:
Status: Closed Package: Sybase (dblib) related
PHP Version: 4.3.3 OS: Solaris 8
Private report: No CVE-ID: None
 [2003-10-03 08:50 UTC] christian_m_caron at hotmail dot com
Description:
------------
It did work in 4.3.2 on another server (Solaris 2.6). We tried to install 4.3.3 and it failed.

We had to add "void ***tsrm_ls;" at the beginning of "php-4.3.3/ext/sybase/php_sybase_db.c" for the compile to work properly.

Reproduce code:
---------------
CC=gcc ./configure 
--prefix=/usr/local/php --with-config-file-path=/usr/local/php/etc 
--with-nsapi=/iplanet 
--enable-libgcc 
--enable-dbase 
--with-xml 
--with-sybase=/usr/local/freetds 
--with-oci8=/usr/oracle 
--with-oracle=/usr/oracle 
--with-mysql=/usr/local/mysql

make

Expected result:
----------------
Build complete.

Actual result:
--------------
/bin/sh /export/home/local/src/php/php-4.3.3/libtool --silent --preserve-dup-dep
s --mode=compile /export/home/local/src/php/php-4.3.3/meta_ccld  -Iext/sybase/ -
I/export/home/local/src/php/php-4.3.3/ext/sybase/ -DPHP_ATOM_INC -I/export/home/
local/src/php/php-4.3.3/include -I/export/home/local/src/php/php-4.3.3/main -I/e
xport/home/local/src/php/php-4.3.3 -I/iplanet/plugins/include -I/export/home/loc
al/src/php/php-4.3.3/Zend -I/usr/local/mysql/include/mysql -I/usr/oracle/rdbms/d
emo -I/usr/oracle/network/public -I/usr/local/freetds/include -I/export/home/loc
al/src/php/php-4.3.3/ext/xml/expat  -D_POSIX_PTHREAD_SEMANTICS -D_POSIX_PTHREAD_
SEMANTICS -D_REENTRANT -I/export/home/local/src/php/php-4.3.3/TSRM  -g -O2 -pthr
eads -DZTS  -prefer-pic -c /export/home/local/src/php/php-4.3.3/ext/sybase/php_s
ybase_db.c -o ext/sybase/php_sybase_db.lo
/export/home/local/src/php/php-4.3.3/ext/sybase/php_sybase_db.c: In function `ph
p_sybase_error_handler':
/export/home/local/src/php/php-4.3.3/ext/sybase/php_sybase_db.c:147: `tsrm_ls' u
ndeclared (first use in this function)
/export/home/local/src/php/php-4.3.3/ext/sybase/php_sybase_db.c:147: (Each undec
lared identifier is reported only once
/export/home/local/src/php/php-4.3.3/ext/sybase/php_sybase_db.c:147: for each fu
nction it appears in.)
/export/home/local/src/php/php-4.3.3/ext/sybase/php_sybase_db.c: In function `ph
p_sybase_message_handler':
/export/home/local/src/php/php-4.3.3/ext/sybase/php_sybase_db.c:158: `tsrm_ls' u
ndeclared (first use in this function)
/export/home/local/src/php/php-4.3.3/ext/sybase/php_sybase_db.c: In function `ph
p_sybase_get_column_content':
/export/home/local/src/php/php-4.3.3/ext/sybase/php_sybase_db.c:749: `tsrm_ls' u
ndeclared (first use in this function)
make: *** [ext/sybase/php_sybase_db.lo] Error 1

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-10-03 14:03 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.

Fixed.
 [2003-10-17 03:17 UTC] yunlan at mail dot eestart dot com
/usr/yly/downloads/php5-200310170130/ext/sybase/php_sybase_db.c: In function `zif_sybase_fetch_object':
/usr/yly/downloads/php5-200310170130/ext/sybase/php_sybase_db.c:1110: error: invalid lvalue in assignment
/usr/yly/downloads/php5-200310170130/ext/sybase/php_sybase_db.c:1111: error: invalid lvalue in assignment
make: *** [ext/sybase/php_sybase_db.lo] Error 1
 [2003-10-17 03:28 UTC] sniper@php.net
Wrong snapshot. This is for PHP 4, NOT PHP 5 which has lot of similar problems which will be eventually fixed.

 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 07:00:02 2026 UTC