Fixed bug #25744 (make ZTS build of ext/sybase compile)